--- a/achievements.html
+++ b/achievements.html
@@ -1,295 +1,275 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Achievements</title>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Achievements</title>
 
-    <!-- Global site styles -->
-    <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css" />
 
-    <style>
-      html,
-      body {
-        margin: 0;
-        padding: 0;
-        min-height: 100%;
-        overflow-y: auto;
-        background-image: url("background2.jpg");
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-        background-attachment: fixed;
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      min-height: 100%;
+      overflow-y: auto;
+      background-image: url("background2.jpg");
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+    }
+
+    @media (max-width: 768px) {
+      html, body {
+        background-attachment: scroll;
       }
+    }
 
-      @media (max-width: 768px) {
-        html,
-        body {
-          background-attachment: scroll;
-        }
-      }
+    main.achievements-page {
+      max-width: 900px;
+      margin: 0 auto;
+      padding: 140px 16px 96px;
+      text-align: center;
+    }
 
-      main.achievements-page {
-        max-width: 900px;
-        margin: 0 auto;
-        padding: 140px 16px 96px;
-        text-align: center;
-      }
+    h1 {
+      font-family: "Cinzel", serif;
+      font-size: 36px;
+      margin-bottom: 72px;
+      color: #6b5ca5;
+      text-transform: none;
+    }
 
-      main.achievements-page h1 {
-        font-family: "Cinzel", serif;
-        font-size: 36px;
-        margin-bottom: 72px;
-        color: #6b5ca5;
-      }
+    .month-section {
+      margin-bottom: 96px;
+    }
 
-      .month-section {
-        margin-bottom: 96px;
-      }
+    .month-title {
+      font-family: "Cinzel", serif;
+      font-size: 22px;
+      color: #6b5ca5;
+      margin-bottom: 40px;
+      text-transform: none;
+    }
 
-      .month-title {
-        font-family: "Cinzel", serif;
-        font-size: 22px;
-        color: #6b5ca5;
-        letter-spacing: 1px;
-        margin-bottom: 40px;
-      }
+    .achievement-card {
+      max-width: 560px;
+      margin: 0 auto 48px;
+      padding: 28px;
+      background: rgba(255, 255, 255, 0.96);
+      border-radius: 18px;
+      border: 1px solid rgba(0,0,0,0.08);
+    }
 
-      .achievement-card {
-        max-width: 560px;
-        margin: 0 auto 48px;
-        padding: 28px;
-        background: rgba(255, 255, 255, 0.96);
-        border-radius: 18px;
-        border: 1px solid rgba(0, 0, 0, 0.08);
-      }
+    .achievement-card h3 {
+      margin: 0 0 8px;
+      font-size: 18px;
+      color: #111;
+      font-weight: 700;
+      text-transform: none;
+    }
 
-      .achievement-card h3 {
-        margin: 0 0 8px;
-        font-size: 18px;
-      }
+    .achievement-meta {
+      font-size: 13px;
+      color: #444;
+      margin-bottom: 14px;
+      font-weight: 500;
+    }
 
-      .achievement-meta {
-        margin: 0 0 14px;
-        font-size: 13px;
-        color: #555;
-      }
+    .achievement-learned {
+      font-size: 14.5px;
+      line-height: 1.7;
+      margin-bottom: 22px;
+      color: #1f1f1f;
+      text-transform: none;
+    }
 
-      .achievement-learned {
-        font-size: 14.5px;
-        line-height: 1.7;
-        margin-bottom: 22px;
-        color: #222;
-      }
+    .certificate-image {
+      width: 100%;
+      max-width: 320px;
+      margin: 0 auto;
+      display: block;
+      border-radius: 12px;
+      border: 1px solid rgba(0,0,0,0.1);
+      background: #fff;
+    }
+  </style>
+</head>
 
-      .certificate-image {
-        width: 100%;
-        max-width: 320px;
-        display: block;
-        margin: 0 auto;
-        border-radius: 12px;
-        border: 1px solid rgba(0, 0, 0, 0.1);
-        background: #fff;
-      }
-    </style>
-  </head>
+<body>
+  <!-- Navigation -->
+  <button class="hamburger" id="hamburger">☰</button>
 
-  <body>
-    <!-- Navigation -->
-    <button class="hamburger" id="hamburger">☰</button>
+  <aside class="mobile-menu" id="mobileMenu">
+    <button class="close" id="closeMenu">×</button>
+    <a href="index.html">Home</a>
+    <a href="resume.html">Resume</a>
+    <a href="portfolio.html">Portfolio</a>
+    <a href="achievements.html">Achievements</a>
+    <a href="contact.html">Contact</a>
+  </aside>
 
-    <aside class="mobile-menu" id="mobileMenu">
-      <button class="close" id="closeMenu">×</button>
-      <a href="index.html">Home</a>
-      <a href="resume.html">Resume</a>
-      <a href="portfolio.html">Portfolio</a>
-      <a href="achievements.html">Achievements</a>
-      <a href="contact.html">Contact</a>
-    </aside>
+  <nav class="desktop-nav">
+    <a href="index.html">Home</a>
+    <a href="resume.html">Resume</a>
+    <a href="portfolio.html">Portfolio</a>
+    <a href="achievements.html">Achievements</a>
+    <a href="contact.html">Contact</a>
+  </nav>
 
-    <nav class="desktop-nav">
-      <a href="index.html">Home</a>
-      <a href="resume.html">Resume</a>
-      <a href="portfolio.html">Portfolio</a>
-      <a href="achievements.html">Achievements</a>
-      <a href="contact.html">Contact</a>
-    </nav>
+  <main class="achievements-page">
+    <h1>Achievements</h1>
 
-    <!-- Content -->
-    <main class="achievements-page">
-      <h1>Achievements</h1>
+    <!-- December 2025 -->
+    <section class="month-section">
+      <div class="month-title">December 2025</div>
 
-      <!-- December 2025 -->
-      <section class="month-section">
-        <div class="month-title">December 2025</div>
+      <article class="achievement-card">
+        <h3>SAP Certified – SAP Generative AI Developer</h3>
+        <div class="achievement-meta">SAP Certification</div>
+        <p class="achievement-learned">
+          Developed a strong understanding of enterprise-grade generative AI systems, including SAP Business AI, AI Core, and production-ready GenAI workflows.
+        </p>
+        <a href="Achievements/sap-generative-ai-developer-certificate.pdf">
+          <img src="Achievements/sap-generative-ai-developer-badge.png" class="certificate-image" alt="SAP Generative AI Developer" />
+        </a>
+      </article>
+    </section>
 
-        <article class="achievement-card">
-          <h3>SAP Certified – SAP Generative AI Developer</h3>
-          <div class="achievement-meta">SAP Certification</div>
-          <p class="achievement-learned">
-            Developed a strong understanding of enterprise-grade generative AI systems,
-            including SAP Business AI, AI Core, and production-ready GenAI workflows.
-          </p>
-          <a href="Achievements/sap-generative-ai-developer-certificate.pdf">
-            <img src="Achievements/sap-generative-ai-developer-badge.png"
-                 class="certificate-image"
-                 alt="SAP Generative AI Developer Certificate" />
-          </a>
-        </article>
-      </section>
+    <!-- October 2025 -->
+    <section class="month-section">
+      <div class="month-title">October 2025</div>
 
-      <!-- October 2025 -->
-      <section class="month-section">
-        <div class="month-title">October 2025</div>
+      <article class="achievement-card">
+        <h3>Getting Started with Generative AI</h3>
+        <div class="achievement-meta">IBM SkillsBuild</div>
+        <p class="achievement-learned">
+          Built foundational knowledge of generative AI concepts, applications, and responsible AI principles.
+        </p>
+        <a href="Achievements/ibm-getting-started-generative-ai-certificate.pdf">
+          <img src="Achievements/ibm-getting-started-generative-ai-badge.png" class="certificate-image" alt="IBM Generative AI" />
+        </a>
+      </article>
 
-        <article class="achievement-card">
-          <h3>Getting Started with Generative AI</h3>
-          <div class="achievement-meta">IBM SkillsBuild</div>
-          <p class="achievement-learned">
-            Built foundational knowledge of generative AI concepts, applications,
-            and responsible AI principles.
-          </p>
-          <a href="Achievements/ibm-getting-started-generative-ai-certificate.pdf">
-            <img src="Achievements/ibm-getting-started-generative-ai-badge.png"
-                 class="certificate-image" />
-          </a>
-        </article>
+      <article class="achievement-card">
+        <h3>GenAI Powered Data Analytics – Job Simulation</h3>
+        <div class="achievement-meta">Forage × Tata</div>
+        <p class="achievement-learned">
+          Applied generative AI techniques to real-world data analytics and insight generation tasks.
+        </p>
+        <a href="Achievements/forage-tata-genai-data-analytics-certificate.pdf">
+          <img src="Achievements/forage-tata-genai-data-analytics-certificate.png" class="certificate-image" alt="Tata GenAI Data Analytics" />
+        </a>
+      </article>
 
-        <article class="achievement-card">
-          <h3>GenAI Powered Data Analytics – Job Simulation</h3>
-          <div class="achievement-meta">Forage × Tata</div>
-          <p class="achievement-learned">
-            Applied generative AI techniques to data analysis, insight generation,
-            and business-oriented reporting.
-          </p>
-          <a href="Achievements/forage-tata-genai-data-analytics-certificate.pdf">
-            <img src="Achievements/ibm-getting-started-generative-ai-badge.png"
-                 class="certificate-image" />
-          </a>
-        </article>
+      <article class="achievement-card">
+        <h3>GenAI Job Simulation</h3>
+        <div class="achievement-meta">Forage × BCG X</div>
+        <p class="achievement-learned">
+          Explored practical GenAI use cases in consulting-style problem solving scenarios.
+        </p>
+        <a href="Achievements/forage-bcgx-genai-certificate.pdf">
+          <img src="Achievements/forage-bcgx-genai-certificate.png" class="certificate-image" alt="BCG X GenAI" />
+        </a>
+      </article>
 
-        <article class="achievement-card">
-          <h3>GenAI Job Simulation</h3>
-          <div class="achievement-meta">Forage × BCG X</div>
-          <p class="achievement-learned">
-            Explored practical GenAI use cases in consulting-style business scenarios,
-            focusing on solution design and impact.
-          </p>
-          <a href="Achievements/forage-bcgx-genai-certificate.pdf">
-            <img src="Achievements/ibm-getting-started-generative-ai-badge.png"
-                 class="certificate-image" />
-          </a>
-        </article>
+      <article class="achievement-card">
+        <h3>Data Science Job Simulation</h3>
+        <div class="achievement-meta">Forage × British Airways</div>
+        <p class="achievement-learned">
+          Worked on airline datasets to derive insights using data science and analytical techniques.
+        </p>
+        <a href="Achievements/forage-british-airways-data-science-certificate.pdf">
+          <img src="Achievements/forage-british-airways-data-science-certificate.png" class="certificate-image" alt="British Airways Data Science" />
+        </a>
+      </article>
 
-        <article class="achievement-card">
-          <h3>Data Science Job Simulation</h3>
-          <div class="achievement-meta">Forage × British Airways</div>
-          <p class="achievement-learned">
-            Worked on real-world airline datasets to derive insights using
-            data science and analytical techniques.
-          </p>
-          <a href="Achievements/forage-british-airways-data-science-certificate.pdf">
-            <img src="Achievements/ibm-getting-started-generative-ai-badge.png"
-                 class="certificate-image" />
-          </a>
-        </article>
+      <article class="achievement-card">
+        <h3>Project Management Job Simulation</h3>
+        <div class="achievement-meta">Forage × Siemens Mobility</div>
+        <p class="achievement-learned">
+          Gained experience in structured project planning, execution, and stakeholder coordination.
+        </p>
+        <a href="Achievements/forage-siemens-mobility-project-management-certificate.pdf">
+          <img src="Achievements/forage-siemens-mobility-project-management-certificate.png" class="certificate-image" alt="Siemens Mobility PM" />
+        </a>
+      </article>
 
-        <article class="achievement-card">
-          <h3>Project Management Job Simulation</h3>
-          <div class="achievement-meta">Forage × Siemens Mobility</div>
-          <p class="achievement-learned">
-            Gained experience in project planning, KPI tracking, and execution
-            within large-scale engineering environments.
-          </p>
-          <a href="Achievements/forage-siemens-mobility-project-management-certificate.pdf">
-            <img src="Achievements/ibm-getting-started-generative-ai-badge.png"
-                 class="certificate-image" />
-          </a>
-        </article>
+      <article class="achievement-card">
+        <h3>Project Management Job Simulation</h3>
+        <div class="achievement-meta">Forage × CBRE</div>
+        <p class="achievement-learned">
+          Learned project workflows, milestone tracking, and professional documentation practices.
+        </p>
+        <a href="Achievements/forage-cbre-project-management-certificate.pdf">
+          <img src="Achievements/forage-cbre-project-management-certificate.png" class="certificate-image" alt="CBRE PM" />
+        </a>
+      </article>
 
-        <article class="achievement-card">
-          <h3>Project Management Job Simulation</h3>
-          <div class="achievement-meta">Forage × CBRE</div>
-          <p class="achievement-learned">
-            Learned structured project workflows, stakeholder coordination,
-            and execution best practices.
-          </p>
-          <a href="Achievements/forage-cbre-project-management-certificate.pdf">
-            <img src="Achievements/ibm-getting-started-generative-ai-badge.png"
-                 class="certificate-image" />
-          </a>
-        </article>
+      <article class="achievement-card">
+        <h3>Software Engineer Skill Certification</h3>
+        <div class="achievement-meta">HackerRank</div>
+        <p class="achievement-learned">
+          Validated core software engineering and problem-solving skills.
+        </p>
+        <a href="Achievements/hackerrank-software-engineer-certificate.pdf">
+          <img src="Achievements/hackerrank-software-engineer-certificate.png" class="certificate-image" alt="HackerRank Software Engineer" />
+        </a>
+      </article>
 
-        <article class="achievement-card">
-          <h3>Software Engineer Skill Certification</h3>
-          <div class="achievement-meta">HackerRank</div>
-          <p class="achievement-learned">
-            Validated core software engineering skills including problem solving,
-            logic building, and code quality.
-          </p>
-          <a href="Achievements/hackerrank-software-engineer-certificate.pdf">
-            <img src="Achievements/ibm-getting-started-generative-ai-badge.png"
-                 class="certificate-image" />
-          </a>
-        </article>
+      <article class="achievement-card">
+        <h3>Python (Basic) Skill Certification</h3>
+        <div class="achievement-meta">HackerRank</div>
+        <p class="achievement-learned">
+          Demonstrated foundational Python programming proficiency.
+        </p>
+        <a href="Achievements/hackerrank-python-basic-certificate.pdf">
+          <img src="Achievements/hackerrank-python-basic-certificate.png" class="certificate-image" alt="HackerRank Python" />
+        </a>
+      </article>
+    </section>
 
-        <article class="achievement-card">
-          <h3>Python (Basic) Skill Certification</h3>
-          <div class="achievement-meta">HackerRank</div>
-          <p class="achievement-learned">
-            Demonstrated foundational Python programming skills, including data
-            types, control flow, and basic problem solving.
-          </p>
-          <a href="Achievements/hackerrank-python-basic-certificate.pdf">
-            <img src="Achievements/ibm-getting-started-generative-ai-badge.png"
-                 class="certificate-image" />
-          </a>
-        </article>
-      </section>
+    <!-- September 2025 -->
+    <section class="month-section">
+      <div class="month-title">September 2025</div>
 
-      <!-- September 2025 -->
-      <section class="month-section">
-        <div class="month-title">September 2025</div>
+      <article class="achievement-card">
+        <h3>Introduction to Transformer-Based NLP</h3>
+        <div class="achievement-meta">NVIDIA</div>
+        <p class="achievement-learned">
+          Learned the fundamentals of transformer architectures and attention mechanisms used in modern NLP.
+        </p>
+        <a href="Achievements/nvidia-transformer-nlp-certificate.pdf">
+          <img src="Achievements/nvidia-transformer-nlp-certificate.png" class="certificate-image" alt="NVIDIA NLP" />
+        </a>
+      </article>
+    </section>
+  </main>
 
-        <article class="achievement-card">
-          <h3>Introduction to Transformer-Based NLP</h3>
-          <div class="achievement-meta">NVIDIA</div>
-          <p class="achievement-learned">
-            Learned the fundamentals of transformer architectures, attention
-            mechanisms, and their role in modern NLP systems.
-          </p>
-          <a href="Achievements/nvidia-transformer-nlp-certificate.pdf">
-            <img src="Achievements/ibm-getting-started-generative-ai-badge.png"
-                 class="certificate-image" />
-          </a>
-        </article>
-      </section>
-    </main>
+  <script>
+    const hamburger = document.getElementById("hamburger");
+    const mobileMenu = document.getElementById("mobileMenu");
+    const closeMenu = document.getElementById("closeMenu");
 
-    <!-- Navigation JS -->
-    <script>
-      const hamburger = document.getElementById("hamburger");
-      const mobileMenu = document.getElementById("mobileMenu");
-      const closeMenu = document.getElementById("closeMenu");
+    hamburger.addEventListener("click", (e) => {
+      e.stopPropagation();
+      mobileMenu.classList.toggle("open");
+    });
 
-      hamburger.addEventListener("click", (e) => {
-        e.stopPropagation();
-        mobileMenu.classList.toggle("open");
-      });
+    closeMenu.addEventListener("click", () => {
+      mobileMenu.classList.remove("open");
+    });
 
-      closeMenu.addEventListener("click", () => {
+    document.addEventListener("click", (e) => {
+      if (
+        mobileMenu.classList.contains("open") &&
+        !mobileMenu.contains(e.target) &&
+        e.target !== hamburger
+      ) {
         mobileMenu.classList.remove("open");
-      });
-
-      document.addEventListener("click", (e) => {
-        if (
-          mobileMenu.classList.contains("open") &&
-          !mobileMenu.contains(e.target) &&
-          e.target !== hamburger
-        ) {
-          mobileMenu.classList.remove("open");
-        }
-      });
-    </script>
-  </body>
+      }
+    });
+  </script>
+</body>
 </html>
