--- a/achievements.html
+++ b/achievements.html
@@ -27,7 +27,7 @@
     }
 
     main.achievements-page {
-      max-width: 1000px;
+      max-width: 960px;
       margin: 0 auto;
       padding: 140px 16px 96px;
       text-align: center;
@@ -51,66 +51,56 @@
       margin-bottom: 40px;
     }
 
-    /* Base card (tablet + phone) */
     .achievement-card {
-      max-width: 560px;
-      margin: 0 auto 56px;
-      padding: 28px;
-      background: rgba(255, 255, 255, 0.96);
-      border-radius: 18px;
-      border: 1px solid rgba(0,0,0,0.08);
-    }
-
-    /* Laptop / Desktop enhancement */
-    @media (min-width: 1024px) {
-      .achievement-card {
-        max-width: 680px;
-        padding: 36px;
-      }
+      max-width: 620px; /* larger on laptop */
+      margin: 0 auto 48px;
+      padding: 32px;
+      background: #ffffff;
+      border-radius: 16px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.08);
     }
 
     .achievement-card h3 {
-      margin: 0 0 8px;
-      font-size: 19px;
+      margin-top: 0;
+      font-size: 18px;
+      font-weight: 600;
       color: #111;
-      font-weight: 700;
     }
 
-    .achievement-meta {
-      font-size: 13px;
-      color: #444;
-      margin-bottom: 16px;
-      font-weight: 500;
-    }
-
-    .achievement-learned {
+    .achievement-card p {
       font-size: 15px;
-      line-height: 1.7;
-      margin-bottom: 22px;
-      color: #1f1f1f;
+      color: #333;
+      line-height: 1.6;
+      margin: 12px 0 20px;
     }
 
-    .certificate-image {
+    .achievement-card img {
       width: 100%;
-      max-width: 340px;
-      margin: 0 auto 12px;
-      display: block;
+      max-width: 420px;
       border-radius: 12px;
-      border: 1px solid rgba(0,0,0,0.1);
-      background: #fff;
+      margin-bottom: 16px;
     }
 
-    .certificate-link {
+    .pdf-link {
       display: inline-block;
+      margin-top: 8px;
       font-size: 14px;
+      color: #6b5ca5;
       text-decoration: underline;
-      color: #4b3f8f;
+    }
+
+    @media (max-width: 768px) {
+      .achievement-card {
+        max-width: 100%;
+        padding: 24px;
+      }
     }
   </style>
 </head>
 
 <body>
-  <!-- Navigation -->
+
+  <!-- Mobile hamburger -->
   <button class="hamburger" id="hamburger">☰</button>
 
   <aside class="mobile-menu" id="mobileMenu">
@@ -122,6 +112,7 @@
     <a href="contact.html">Contact</a>
   </aside>
 
+  <!-- Desktop nav -->
   <nav class="desktop-nav">
     <a href="index.html">Home</a>
     <a href="resume.html">Resume</a>
@@ -137,68 +128,117 @@
     <section class="month-section">
       <div class="month-title">December 2025</div>
 
-      <article class="achievement-card">
+      <div class="achievement-card">
         <h3>SAP Certified – SAP Generative AI Developer</h3>
-        <div class="achievement-meta">SAP Certification</div>
-        <p class="achievement-learned">
-          Developed a strong understanding of enterprise-grade generative AI systems, including SAP Business AI, AI Core, and production-ready GenAI workflows.
+        <p>
+          Gained enterprise-level expertise in generative AI development,
+          including SAP Business AI Core and production-ready AI workflows.
         </p>
-        <img src="Achievements/sap-generative-ai-developer-badge.png" class="certificate-image" alt="SAP Generative AI Developer" />
-        <a href="Achievements/sap-generative-ai-developer-certificate.pdf" class="certificate-link">
-          View certificate (PDF)
-        </a>
-      </article>
+        <img src="Achievements/sap-generative-ai-developer-badge.png" alt="SAP Generative AI Developer" />
+        <a class="pdf-link" href="Achievements/sap-generative-ai-developer-certificate.pdf">View certificate (PDF)</a>
+      </div>
     </section>
 
     <!-- October 2025 -->
     <section class="month-section">
       <div class="month-title">October 2025</div>
 
-      <article class="achievement-card">
-        <h3>Getting Started with Generative AI</h3>
-        <div class="achievement-meta">IBM SkillsBuild</div>
-        <p class="achievement-learned">
-          Built foundational knowledge of generative AI concepts, applications, and responsible AI principles.
+      <div class="achievement-card">
+        <h3>Getting Started with Generative AI — IBM SkillsBuild</h3>
+        <p>
+          Built foundational understanding of generative AI concepts,
+          responsible AI practices, and real-world applications.
         </p>
-        <img src="Achievements/ibm-getting-started-generative-ai-badge.png" class="certificate-image" alt="IBM Generative AI" />
-        <a href="Achievements/ibm-getting-started-generative-ai-certificate.pdf" class="certificate-link">
-          View certificate (PDF)
-        </a>
-      </article>
+        <img src="Achievements/ibm-getting-started-generative-ai-badge.png" alt="IBM Generative AI" />
+        <a class="pdf-link" href="Achievements/ibm-getting-started-generative-ai-certificate.pdf">View certificate (PDF)</a>
+      </div>
 
-      <!-- Repeat same pattern for all remaining October cards -->
-      <!-- (Already correct assets; only link added) -->
+      <div class="achievement-card">
+        <h3>GenAI Powered Data Analytics — Job Simulation</h3>
+        <p>
+          Applied generative AI techniques to data analytics and insight
+          generation using real-world business scenarios.
+        </p>
+        <img src="Achievements/forage-tata-genai-data-analytics-certificate.png" alt="Forage Tata GenAI" />
+        <a class="pdf-link" href="Achievements/forage-tata-genai-data-analytics-certificate.pdf">View certificate (PDF)</a>
+      </div>
 
-      <!-- Example -->
-      <article class="achievement-card">
+      <div class="achievement-card">
         <h3>GenAI Job Simulation</h3>
-        <div class="achievement-meta">Forage × BCG X</div>
-        <p class="achievement-learned">
-          Explored practical GenAI use cases in consulting-style problem-solving scenarios.
+        <p>
+          Explored consulting-style problem solving using generative AI
+          across structured business cases.
         </p>
-        <img src="Achievements/forage-bcgx-genai-certificate.png" class="certificate-image" alt="BCG X GenAI" />
-        <a href="Achievements/forage-bcgx-genai-certificate.pdf" class="certificate-link">
-          View certificate (PDF)
-        </a>
-      </article>
+        <img src="Achievements/forage-bcgx-genai-certificate.png" alt="BCG X GenAI" />
+        <a class="pdf-link" href="Achievements/forage-bcgx-genai-certificate.pdf">View certificate (PDF)</a>
+      </div>
+
+      <div class="achievement-card">
+        <h3>Data Science Job Simulation</h3>
+        <p>
+          Worked with airline datasets to derive insights using data science
+          and analytical modeling techniques.
+        </p>
+        <img src="Achievements/forage-british-airways-data-science-certificate.png" alt="British Airways DS" />
+        <a class="pdf-link" href="Achievements/forage-british-airways-data-science-certificate.pdf">View certificate (PDF)</a>
+      </div>
+
+      <div class="achievement-card">
+        <h3>Project Management Job Simulation</h3>
+        <p>
+          Practiced end-to-end project planning and execution in large-scale
+          enterprise environments.
+        </p>
+        <img src="Achievements/forage-siemens-mobility-project-management-certificate.png" alt="Siemens Mobility PM" />
+        <a class="pdf-link" href="Achievements/forage-siemens-mobility-project-management-certificate.pdf">View certificate (PDF)</a>
+      </div>
+
+      <div class="achievement-card">
+        <h3>Project Management Job Simulation</h3>
+        <p>
+          Developed structured project management approaches including
+          stakeholder coordination and delivery planning.
+        </p>
+        <img src="Achievements/forage-cbre-project-management-certificate.png" alt="CBRE PM" />
+        <a class="pdf-link" href="Achievements/forage-cbre-project-management-certificate.pdf">View certificate (PDF)</a>
+      </div>
+
+      <div class="achievement-card">
+        <h3>Software Engineer Skill Certification</h3>
+        <p>
+          Demonstrated core software engineering skills including problem
+          solving, design thinking, and implementation.
+        </p>
+        <img src="Achievements/hackerrank-software-engineer-certificate.png" alt="HackerRank SE" />
+        <a class="pdf-link" href="Achievements/hackerrank-software-engineer-certificate.pdf">View certificate (PDF)</a>
+      </div>
+
+      <div class="achievement-card">
+        <h3>Python (Basic) Skill Certification</h3>
+        <p>
+          Validated foundational Python programming skills including data
+          structures, control flow, and basic algorithms.
+        </p>
+        <img src="Achievements/hackerrank-python-basic-certificate.png" alt="HackerRank Python" />
+        <a class="pdf-link" href="Achievements/hackerrank-python-basic-certificate.pdf">View certificate (PDF)</a>
+      </div>
     </section>
 
     <!-- September 2025 -->
     <section class="month-section">
       <div class="month-title">September 2025</div>
 
-      <article class="achievement-card">
+      <div class="achievement-card">
         <h3>Introduction to Transformer-Based NLP</h3>
-        <div class="achievement-meta">NVIDIA</div>
-        <p class="achievement-learned">
-          Learned the fundamentals of transformer architectures and attention mechanisms used in modern NLP systems.
+        <p>
+          Learned transformer architectures, attention mechanisms, and their
+          applications in modern natural language processing systems.
         </p>
-        <img src="Achievements/nvidia-transformer-nlp-certificate.png" class="certificate-image" alt="NVIDIA NLP" />
-        <a href="Achievements/nvidia-transformer-nlp-certificate.pdf" class="certificate-link">
-          View certificate (PDF)
-        </a>
-      </article>
+        <img src="Achievements/nvidia-transformer-nlp-certificate.png" alt="NVIDIA Transformer NLP" />
+        <a class="pdf-link" href="Achievements/nvidia-transformer-nlp-certificate.pdf">View certificate (PDF)</a>
+      </div>
     </section>
+
   </main>
 
   <script>
@@ -225,5 +265,6 @@
       }
     });
   </script>
+
 </body>
 </html>
